samples/_failures_safe/1761366463_23c34d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e8dd1b7.c: In function ‘main’:
./samples/SAFE/__tmp_2e8dd1b7.c:172:12: error: missing terminating " character
  172 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_2e8dd1b7.c:172:5: error: expected expression at end of input
  172 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_2e8dd1b7.c:172:5: error: expected declaration or statement at end of input
